kubernetes/k8s-backend-config/pod-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nino-test
  labels:
    app: nino-test
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - name: nginx 
      containerPort: 80
