kubernetes/k8s-backend-config/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nino-test
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
