kubernetes/k8s-backend-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
spec:
  # type: NodePort
  selector:
    app: nino-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: nginx
