kubernetes/k8s-backend-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  # defaultBackend:
  #   resource:
  #     apiGroup: k8s.example.com
  #     kind: StorageBucket
  #     name: static-assets
  rules:
    - http:
        paths:
          # - path: /icons
          #   pathType: ImplementationSpecific
          #   backend:
          #     resource:
          #       apiGroup: k8s.example.com
          #       kind: StorageBucket
          #       name: icon-assets
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: nginx
                port:
                  number: 80
